Remove ghcide-test-utils as standalone package

--- a/ghcide-bench/ghcide-bench.cabal
+++ b/ghcide-bench/ghcide-bench.cabal
@@ -67,8 +67,7 @@ library
         directory,
         extra,
         filepath,
-        ghcide,
-        ghcide-test-utils,
+        ghcide:{ghcide, ghcide-test-utils},
         hashable,
         lens,
         lsp-test,
