--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -1,4 +1,4 @@
-cabal-version:      3.0
+cabal-version:      3.4
 build-type:         Simple
 category:           Development
 name:               ghcide
@@ -280,6 +280,40 @@ executable ghcide
   if !flag(executable)
     buildable: False
 
+library ghcide-test-utils
+  import: warnings
+  visibility: public
+  default-language:   GHC2021
+
+  hs-source-dirs: test/src test/cabal 
+  exposed-modules:
+    Development.IDE.Test
+    Development.IDE.Test.Runfiles
+    Development.IDE.Test.Diagnostic
+
+  build-depends:
+      aeson,
+      base > 4.9 && < 5,
+      containers,
+      data-default,
+      directory,
+      extra,
+      filepath,
+      ghcide,
+      lsp-types,
+      hls-plugin-api,
+      lens,
+      lsp-test ^>= 0.17,
+      tasty-hunit >= 0.10,
+      text,
+      row-types,
+
+  default-extensions:
+      LambdaCase
+      OverloadedStrings
+      RecordWildCards
+      ViewPatterns
+  
 test-suite ghcide-tests
   import: warnings
   type:               exitcode-stdio-1.0
@@ -301,6 +335,7 @@ test-suite ghcide-tests
     , filepath
     , fuzzy
     , ghcide
+    , ghcide:ghcide-test-utils
     , hls-plugin-api
     , lens
     , list-t
@@ -330,7 +365,7 @@ test-suite ghcide-tests
   if impl(ghc <9.3)
     build-depends: ghc-typelits-knownnat
 
-  hs-source-dirs:     test/cabal test/exe test/src
+  hs-source-dirs:     test/exe 
   ghc-options:        -threaded -O0
 
   main-is:            Main.hs
@@ -343,9 +378,6 @@ test-suite ghcide-tests
     CPPTests
     CradleTests
     DependentFileTest
-    Development.IDE.Test
-    Development.IDE.Test.Diagnostic
-    Development.IDE.Test.Runfiles
     DiagnosticTests
     ExceptionTests
     FindDefinitionAndHoverTests
