--- a/bench/config.yaml
+++ b/bench/config.yaml
@@ -23,10 +23,10 @@ examples:
     package: Cabal
     version: 3.6.3.0
     modules:
-        # - src/Distribution/Simple.hs
-        # - src/Distribution/Types/Module.hs
-        - src/Distribution/Simple/Configure.hs
-        - src/Distribution/Simple/BuildTarget.hs
+        - src/Distribution/Simple.hs
+        - src/Distribution/Types/Module.hs
+        #- src/Distribution/Simple/Configure.hs
+        #- src/Distribution/Simple/BuildTarget.hs
     extra-args: [] # extra HLS command line args
   # Small-sized project with TH
   - name: lsp-types
