--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,8 +93,9 @@ jobs:
             test: false
 
     steps:
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
+      - if: matrix.test && matrix.os == 'ubuntu-latest'
+        name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@v1.3.1
         with:
           # this might remove tools that are actually needed,
           # if set to "true" but frees about 6 GB
@@ -108,6 +109,7 @@ jobs:
           large-packages: true
           docker-images: true
           swap-storage: true
+
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/setup-build
